crates/oxc_angular_compiler/tests/snapshots/integration_test__safe_navigation_chain.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div");
    i0.ɵɵtext(1);
    i0.ɵɵelementEnd();
  }
  if ((rf & 2)) {
    i0.ɵɵadvance();
    i0.ɵɵtextInterpolate(((ctx.user == null)? null: ((ctx.user.address == null)? null: ctx.user.address.city)));
  }
}
