crates/oxc_angular_compiler/tests/snapshots/integration_test__safe_navigation_in_binding.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵelement(0,"div",0); }
  if ((rf & 2)) { i0.ɵɵproperty("title",((ctx.user == null)? null: ctx.user.displayName)); }
}
