crates/oxc_angular_compiler/tests/snapshots/integration_test__sequence_expression_in_event_handler.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"input",0);
    i0.ɵɵlistener("blur",function TestComponent_Template_input_blur_0_listener() {
      ctx.isInputFocused.set(false);
      return ctx.onTouch();
    });
    i0.ɵɵelementEnd();
  }
}
