crates/oxc_angular_compiler/tests/snapshots/integration_test__static_attributes_in_for_loop.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
var _forTrack_0 = ($index,$item) =>$item.id;
function TestComponent_For_1(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0,' ');
    i0.ɵɵelementStart(1,'a',0);
    i0.ɵɵtext(2,'Text');
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,' ');
  }
  if ((rf & 2)) {
    const item_i2 = ctx.$implicit;
    const ctx_r3 = i0.ɵɵnextContext();
    i0.ɵɵadvance();
    i0.ɵɵproperty('href',item_i2.link);
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r0 = i0.ɵɵgetCurrentView();
    i0.ɵɵrepeaterCreate(0,TestComponent_For_1,4,1,null,null,_forTrack_0,false);
  }
  if ((rf & 2)) { i0.ɵɵrepeater(ctx.items); }
}
